--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,12 @@ add_executable(imgui_fc_visualizer
     main.cpp 
     AudioVisualizer.cpp 
     AudioVisualizer.h
+    PianoVisualizer.cpp
+    PianoVisualizer.h
 )
 target_link_libraries(imgui_fc_visualizer PRIVATE sokol imgui game_music_emu nfd)
+
+# Include directories for gme headers
+target_include_directories(imgui_fc_visualizer PRIVATE 
+    ${CMAKE_SOURCE_DIR}/3rd_party/Game_Music_Emu
+)
