--- a/3rd_party/CMakeLists.txt
+++ b/3rd_party/CMakeLists.txt
@@ -75,3 +75,7 @@ target_include_directories(agnes PUBLIC agnes)
 
 # nfd
 add_subdirectory(nativefiledialog-extended)
+
+# TinySoundFont
+add_library(TinySoundFont INTERFACE)
+target_include_directories(TinySoundFont INTERFACE TinySoundFont)
