--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,16 @@ add_executable(imgui_fc_visualizer
     NesEmulator.cpp
     NesEmulator.h
 )
-target_link_libraries(imgui_fc_visualizer PRIVATE sokol imgui game_music_emu agnes nfd)
+target_link_libraries(imgui_fc_visualizer PRIVATE sokol imgui game_music_emu agnes nfd TinySoundFont)
 target_compile_options(imgui_fc_visualizer PUBLIC $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<NOT:$<COMPILE_LANGUAGE:CUDA>>>:/wd4819>)
 
 # Include directories for gme headers
 target_include_directories(imgui_fc_visualizer PRIVATE 
     ${CMAKE_SOURCE_DIR}/3rd_party/Game_Music_Emu
     ${CMAKE_SOURCE_DIR}/3rd_party
+)
+
+add_custom_command(
+    TARGET imgui_fc_visualizer POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ARGS "${CMAKE_CURRENT_SOURCE_DIR}/SoundFont" "${CMAKE_CURRENT_BINARY_DIR}/SoundFont"
 )
